Improve video conf and end buttons in meeting actions

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -237,6 +237,7 @@
   "MeetingActions": {
     "defaultEntityDescription": "Meeting: {{meeting}}",
     "start": "Start",
+    "end": "End",
     "reopen": "Start again",
     "stop": "Save and stop editing",
     "videoConf": "Join the videoconf"
