--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -237,6 +237,7 @@
   "MeetingActions": {
     "defaultEntityDescription": "Réunion : {{meeting}}",
     "start": "Démarrer",
+    "end": "Terminer",
     "reopen": "Démarrer à nouveau",
     "stop": "Enregistrer et quitter l'édition",
     "videoConf": "Rejoindre la visio"
