Display "Ctrl" instead of "⌘" on non-Mac device

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -165,7 +165,7 @@
     "create": "Create an organization"
   },
   "HeaderSearch": {
-    "tooltip": "Search (⌘ K)",
+    "tooltip": "Search ({{keys}})",
     "placeholder": "Search..."
   },
   "HeaderUserMenu": {
