--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -165,7 +165,7 @@
     "create": "Créer une organisation"
   },
   "HeaderSearch": {
-    "tooltip": "Rechercher (⌘ K)",
+    "tooltip": "Rechercher ({{keys}})",
     "placeholder": "Rechercher..."
   },
   "HeaderUserMenu": {
