Fix meetings filtering

--- a/functions/src/i18n/locales/en.json
+++ b/functions/src/i18n/locales/en.json
@@ -1,7 +1,7 @@
 {
   "meetingsIcal": {
     "meeting": {
-      "title": "Meeting {{title}} - {{role}}"
+      "title": "{{role}} - {{title}}"
     }
   }
 }
